--- a/EVA_apps/EdurellVideoAnnotation/templates/mooc_annotator.html
+++ b/EVA_apps/EdurellVideoAnnotation/templates/mooc_annotator.html
@@ -49,7 +49,7 @@
 
          </div>
 
-         <div class="buttons">
+        <div class="buttons">
             <button onclick="showRelationDiv()" class="btn btn-primary btn-addrelation btn-dodgerblue">
               Add Relation
             </button>
@@ -69,7 +69,8 @@
             <button onclick="downloadManuGraphAsJson()" class="btn btn-primary btn-addrelation btn-dodgerblue">
               Download graph
             </button>
-         </div>
+        </div>
+        <div id="saveGraphText" style="display:none; text-align:center;">Saving graph...</div>
 
      </div>
      
