--- a/EVA_apps/EdurellVideoAnnotation/templates/video_selection.html
+++ b/EVA_apps/EdurellVideoAnnotation/templates/video_selection.html
@@ -54,7 +54,11 @@
           <div class="col">
               <p class="titleLower"> Select a video</p>
           </div>
-
+          <!-- <div class="col" title="before starting the manual annotator wait for the video segmentation to finish: this could result in keyframes based on slides show up">
+            <label class="titleLower" style="font-size: 1.2rem;"> wait for segmentation
+              <input type="checkbox" id="waitSegmentationCheckbox"></input>
+            </label>
+          </div> -->
           <div class="input-group rounded searchbar col">
             <input type="search" class="form-control rounded" autocomplete="off" placeholder="Search" aria-label="Search"
               aria-describedby="search-addon" id="searchbar" onkeyup="search_video()"/>
@@ -98,7 +102,7 @@
 
       <div class="modal-body" style="height:300px;">
         <div id="frontPopupWindowTextContainer">
-          <h5 class="title" id="conceptsModalLabel" style="margin-top: 2%">Add Youtube Url</h5>
+          <h5 class="title" id="conceptsModalLabel" style="margin-top: 2%">Add YouTube Url</h5>
               <br>
               <form method="POST" id="urlForm">
                 {{ form.csrf_token }}
@@ -106,13 +110,13 @@
                    {{ form.url(class_='form-control', autocomplete="off", id="youtube_url")}}
                  </div>
               <button type="submit" class="btn btn-dodgerblue float-right">
-                  Add Video & Start Annotate
+                  Add Video & Start Annotation
               </button>
               </form>
         </div>
         <div class="container" id="loadingInForwardWindow" style="display:none; margin-top: 12%">
             <div class="text-center" style="margin-top: 4%">
-               <p class="titleLower"> The video is being downloaded and analyzed.. </p>
+               <p class="titleLower"> The video is being downloaded and analyzed... </p>
               <div class="spinner-border text-primary" role="status">
                 <span class="sr-only">Loading...</span>
               </div>
@@ -120,8 +124,8 @@
         </div>
       </div>
       <div class="modal-footer" id="stopAndCloseButtonsFooter">
-        <button type="button" id="breakButton" class="btn btn-secondary" onclick="breakAnalysis()" style="display: none;">Stop</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" id="breakButton" class="btn btn-secondary" title="send stop signal to segmentation algorithm" style="display: none;">Stop Segmentation</button>
+        <!--<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
       </div>
     </div>
   </div>
@@ -149,9 +153,26 @@
         
     }
 
-    function breakAnalysis(){
-      console.log("Breaking analysis.... how to do it? And do we really need it?")
-    }
+    //$("#breakButton").click(function(){
+    //  console.log("Breaking analysis....")
+    //  $.ajax({
+    //    url: '/annotator/stop_segmentation',
+    //    type : 'get',
+    //    success: function(result) {
+    //      console.log("Stopped Execution")
+    //    }
+    //  })
+    //});
+
+    //const checkbox = document.getElementById("waitSegmentationCheckbox");
+
+    //checkbox.addEventListener('change', function() {
+    //  if (this.checked) {
+    //    console.log('Checkbox is checked');
+    //  } else {
+    //    console.log('Checkbox is not checked');
+    //  }
+    //});
 
     $("#urlForm").submit(function() {
       addVideoLoading()
