bug fix and documentation

--- a/EVA_apps/EdurellVideoAnnotation/templates/video_selection.html
+++ b/EVA_apps/EdurellVideoAnnotation/templates/video_selection.html
@@ -123,10 +123,10 @@
             </div>
         </div>
       </div>
-      <div class="modal-footer" id="stopAndCloseButtonsFooter">
+      <!--<div class="modal-footer" id="stopAndCloseButtonsFooter">
         <button type="button" id="breakButton" class="btn btn-secondary" title="send stop signal to segmentation algorithm" style="display: none;">Stop Segmentation</button>
-        <!--<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-      </div>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>-->
     </div>
   </div>
 </div>
