--- a/EVA_apps/EdurellVideoAugmentation/src/react-app/src/components/Dashboard/Dashboard.css
+++ b/EVA_apps/EdurellVideoAugmentation/src/react-app/src/components/Dashboard/Dashboard.css
@@ -1,11 +1,12 @@
 .welcomeDashboardContainer {
     background-color: #E4E4E4;
-    height: 250px;
+    height: auto;
     width: 99%;
     display: flex;
     flex-direction: column;
     padding-top: 3%;
-    padding-left: 5%
+    padding-left: 5%;
+    padding-bottom: 5%
 }
 
 .welcomeDashboard {
@@ -47,8 +48,8 @@
 }
 
 .catalogContainer {
-    width: 25%;
-    height: 18%;
+    width: 500px;
+    height: 50px;
     background-color: #C4C4C4;
     border-radius: 10px;
     display: flex;
